gke/gke-expose-services/istio1/istio-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
  - "*"
  gateways:
  - hello-gateway
  http:
  - match:
    - uri:
        prefix: /v1
    route:
    - destination:
        host: hello
        subset: v1
  - match:
    - uri:
        prefix: /v2
    route:
    - destination:
        host: hello
        subset: v2
  - route:
    - destination:
        host: hello
        subset: v2
